# daisypy-io

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint-and-test.yml  python-publish.yml
daisypy/io/: __init__.py  dai.py  dai_formatting.py  dai_grammar.py  dai_transformer.py  dai_util.py  dlf.py  exceptions.py
tests/: test_edit_dai.py  test_filter_dai.py  test_format_dai.py  test_parse_dai.py  test_read_dai.py
tests/test-data/extended-grammar-files/: placeholder.dai
tests/test-data/valid-dai-files/: defhorizon.dai  sample.dai  test-spawn.dai  test-spawn1.dai
