[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "daisypy-io"
authors = [
  { name="Silas Nyboe Ørting", email="silas@di.ku.dk" },
]
description = "IO library for Daisy"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "pandas",
    "lark"
 ]
dynamic = ["version"]
readme = "README.md"

[project.urls]
Homepage = "https://daisy.ku.dk/"

[project.optional-dependencies]
test =[
     "pytest",
]
lint = [
     "pylint",
     "pytest",
]
all = [
    "pytest",
    "pylint"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["daisypy.io"]
namespaces = true

[tool.setuptools_scm]
version_file = "daisypy/io/_version.py"

[tool.pylint.messages_control] 
disable = [
    'trailing-whitespace',
    'trailing-newlines',
 ]
ignore = [
     '_version.py',
     'build',
]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]